# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  08 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/snapshot_target.py:
  Add a patch from Robin Johnson <robbat2@gentoo.org> from bug #207860 to
  exclude digest-* files from the snapshot.

  08 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> arch/amd64.py,
  arch/x86.py, modules/generic_stage_target.py:
  Fixing a minor display issue when we write out make.conf, adding HOSTUSE for
  amd64 to add mmx, sse, and sse2 to USE, adding sse2 to pentium4's HOSTUSE.

  07 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/kmerge.sh:
  Make the --kerncache option to genkernel dependent on 'kerncache' being in
  options, so that it can actually be turned off

  07 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> arch/amd64.py,
  arch/mips.py:
  Rearrange things in the arch/*.py files to ensure that nothing is used
  before it has been defined.

  07 Feb 2008; Andrew Gaffney <agaffney@gentoo.org> arch/powerpc.py:
  Reorder arch/powerpc.py to make python happy

  07 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  modules/snapshot_target.py:
  Change .svn --include to an --exclude like it was supposed to be

  07 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> arch/mips.py,
  catalyst:
  Added several subarches for mips so we can dump the mips subarch profiles
  from my shiny new multi-parent profile structure. This is 2.0.6_pre1 for
  testing.

  07 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh:
  Changed the code for copying the MOTD files so it's fewer lines and makes
  more sense.

  06 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> +arch/powerpc.py,
  -arch/ppc.py, -arch/ppc64.py, arch/sparc.py, -arch/sparc64.py:
  Merged ppc.py and ppc64.py into powerpc.py and merged sparc.py and
  sparc64.py into sparc.py, so we have a cleaner set of arch files.
