@@ -19,3 +19,4 @@ Joshua Kinard <kumba@gentoo.org>
 Lars Weiler <pylon@gentoo.org>
 Andrew Gaffney <agaffney@gentoo.org>
 Diego Pettenò <flameeyes@gentoo.org>
+Robin H. Johnson <robbat2@gentoo.org>
