@@ -9,6 +9,18 @@
 #	ripemd256, sha256, sha512, ripemd160, md5
 digests="md5 sha1"
 
+# Creates a .CONTENTS file listing the contents of the file. Pick from any of
+# the supported options below:
+# auto		- strongly recommended
+# tar-tv	- does 'tar tvf FILE'
+# tar-tvz	- does 'tar tvzf FILE'
+# tar-tvy	- does 'tar tvyf FILE'
+# isoinfo-l	- does 'isoinfo -l -i FILE'
+# isoinfo-f	- does 'isoinfo -f -i FILE'
+# 'isoinfo-f' is the only option not chosen by the automatic algorithm.
+# If this variable is empty, no .CONTENTS will be generated at all.
+contents="auto"
+
 # distdir specifies where your distfiles are located. This setting should
 # work fine for most default installations.
 distdir="/usr/portage/distfiles"
