@@ -84,6 +84,7 @@ class grp_target(generic_stage_target):
 				files=[filename for filename in files if filename[0] != '.']
 				for i in files:
 					if os.path.isfile(normpath(destdir+"/"+i)):
+						self.gen_contents_file(normpath(destdir+"/"+i))
 						self.gen_digest_file(normpath(destdir+"/"+i))
 			else:
 				destdir=normpath(self.settings["target_path"]+"/"+pkgset)
@@ -99,6 +100,7 @@ class grp_target(generic_stage_target):
 				files=[filename for filename in files if filename[0] != '.']
 				for i in files:
 					if os.path.isfile(normpath(destdir+"/"+i)):
+						self.gen_contents_file(normpath(destdir+"/"+i))
 						self.gen_digest_file(normpath(destdir+"/"+i))
 
 	def set_action_sequence(self):
