@@ -1,6 +1,13 @@
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Id: $
 
+  08 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS, catalyst,
+  files/catalyst.conf, modules/catalyst_support.py,
+  modules/generic_stage_target.py, modules/grp_target.py,
+  modules/snapshot_target.py:
+  Added support for generating CONTENTS files automatically. Patch by Robin
+  Johnson <robbat2@gentoo.org> for bug #207862.
+
   08 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
   modules/snapshot_target.py:
   Add a patch from Robin Johnson <robbat2@gentoo.org> from bug #207860 to
